[gd_scene load_steps=18 format=3 uid="uid://dk6a56e3n3mbc"]

[ext_resource type="PackedScene" uid="uid://cupi7qpibwqb1" path="res://Scenes/Virtual/actor.tscn" id="1_xtkr7"]
[ext_resource type="Script" uid="uid://5igxx24o7jgk" path="res://Scenes/Player/player.gd" id="2_5gwpl"]
[ext_resource type="Texture2D" uid="uid://c8dwd60f35vms" path="res://Assets/Player/old/p1_stand.png" id="3_bkssa"]
[ext_resource type="Texture2D" uid="uid://btyqfdh3sw080" path="res://Assets/Player/old/p1_hurt.png" id="4_dxnfb"]
[ext_resource type="Texture2D" uid="uid://kkorvrbhgs2j" path="res://Assets/Player/old/walk/p1_walk01.png" id="4_ov4l0"]
[ext_resource type="Texture2D" uid="uid://bg7w40qiq40eh" path="res://Assets/Player/old/p1_jump.png" id="5_381ol"]
[ext_resource type="Texture2D" uid="uid://bpuen0l3oje0j" path="res://Assets/Player/old/walk/p1_walk02.png" id="5_tiepq"]
[ext_resource type="Texture2D" uid="uid://b324l45a1vn1a" path="res://Assets/Player/old/walk/p1_walk03.png" id="6_2mlv0"]
[ext_resource type="Texture2D" uid="uid://ctxr2g4xkrq4m" path="res://Assets/Player/old/walk/p1_walk04.png" id="7_kjal2"]
[ext_resource type="Texture2D" uid="uid://cku0flysvjd35" path="res://Assets/Player/old/walk/p1_walk05.png" id="8_l32pm"]
[ext_resource type="Texture2D" uid="uid://fqc5ncpsbna4" path="res://Assets/Player/old/walk/p1_walk06.png" id="9_q2yl5"]
[ext_resource type="Texture2D" uid="uid://tcapj3gl3trt" path="res://Assets/Player/old/walk/p1_walk07.png" id="10_cxfx5"]
[ext_resource type="Texture2D" uid="uid://3k6xckrq1ddr" path="res://Assets/Player/old/walk/p1_walk10.png" id="11_djo24"]
[ext_resource type="Texture2D" uid="uid://oskjfdq2ento" path="res://Assets/Player/old/walk/p1_walk11.png" id="12_xmdyi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbkd8"]
size = Vector2(38, 73)

[sub_resource type="SpriteFrames" id="SpriteFrames_dkb7f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bkssa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dxnfb")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dxnfb")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_381ol")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ov4l0")
}, {
"duration": 1.0,
"texture": ExtResource("5_tiepq")
}, {
"duration": 1.0,
"texture": ExtResource("6_2mlv0")
}, {
"duration": 1.0,
"texture": ExtResource("7_kjal2")
}, {
"duration": 1.0,
"texture": ExtResource("8_l32pm")
}, {
"duration": 1.0,
"texture": ExtResource("9_q2yl5")
}, {
"duration": 1.0,
"texture": ExtResource("10_cxfx5")
}, {
"duration": 1.0,
"texture": ExtResource("11_djo24")
}, {
"duration": 1.0,
"texture": ExtResource("12_xmdyi")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvbrh"]
size = Vector2(36, 22)

[node name="Player" groups=["player"] instance=ExtResource("1_xtkr7")]
scale = Vector2(0.32, 0.32)
collision_layer = 10
collision_mask = 15
script = ExtResource("2_5gwpl")
coyote_time_frames = 6
jump_time_frames = 6
friction = 0.428
acceleration = 0.715

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_jbkd8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_dkb7f")
animation = &"walk"

[node name="Timers" type="Node" parent="." index="2"]

[node name="CoyoteTimer" type="Timer" parent="Timers" index="0"]
unique_name_in_owner = true
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers" index="1"]
unique_name_in_owner = true
one_shot = true

[node name="JumpHoldTimer" type="Timer" parent="Timers" index="2"]
unique_name_in_owner = true

[node name="Hitbox" parent="." index="3"]
collision_layer = 10
collision_mask = 6

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, 45)
shape = SubResource("RectangleShape2D_xvbrh")

[connection signal="timeout" from="Timers/CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
